# tl2s_mini_raytracer

./: README.md  TODO.txt  roadmap.md
resources/: camera.md
src/: .ninja_deps  .ninja_log  CMakeLists.txt  geometry_test.cxx  image_test.cxx  main.cxx
src/modules/: geometry.cxx  image.cxx  lodepng.cpp
